--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^5.1.0
   http: ^1.1.0
   flutter_dotenv: ^5.1.0
+  riverpod: ^2.3.6
 
 dev_dependencies:
   flutter_test:
